# CropYieldAI

./: .gitattributes  .gitignore  README.md  add.py  app.py  crew.py  crop.db  main_api.py  orchestrator.py  pyproject.toml  requirements.txt  streamlit_app.py  tools.py
agents/: __init__.py  crew.py  interpreter.py  pre_processor.py  predictor.py  retriever.py
data/: crop_data.csv  crop_yield_data_sampled.csv
models/: predictor.joblib  soil_encoder.joblib
utils/: __init__.py  db.py  evaluate.py  security.py
